[2] - documentation enhancements
