# src/api/ethRouter.js
@@ -13,77 +13,6 @@ const {axios} = require('../index')
 
 const {INFURA_KEY, ETH} = require('../constants')
 
-/**
- * @typedef Wallet
- * @property {string} mnemonic - generated mnemonic for wallet - eg: urge pulp usage sister evidence arrest palm math please chief egg abuse
- * @property {string} xpriv - generated xpriv for wallet with derivation path according to BIP44 - eg: xprvA1srLWNaGEkhdSJg6cLTMAziUpQcefpu2ZnKH2PXGiXEPKTdVPHjLFp4aZSSqSsaLMNrWXoj6TsyyUqh18T1hbiQkC42aWjXB9HnpmmqrYr
- * @property {string} xpub - generated xpub for wallet with derivation path according to BIP44 - eg: xpub6EsCk1uU6cJzqvP9CdsTiJwT2rF748YkPnhv5Qo8q44DG7nn2vbyt48YRsNSUYS44jFCW9gwvD9kLQu9AuqXpTpM1c5hgg9PsuBLdeNncid
- */
-
-/**
- * @typedef WalletGenerateEth
- * @property {string} chain - 'mainnet' or 'ropsten' - eg: ropsten
- */
-
-/**
- * @typedef Erc20
- * @property {string} tx - tx hash - eg: 0x93feef50a0754d5b815964ec41a744b8b60fd83bac7657386b21cd8a7c38a3b1
- * @property {string} contractAddress - address of generated smart contract - eg: 0x687422eEA2cB73B5d3e242bA5456b782919AFc85
- */
-
-/**
- * @typedef XPrivEth
- * @property {string} chain.required - chain - 'mainnet' or 'ropsten' - eg: ropsten
- * @property {string} mnemonic.required - mnemonic to generate private key from - eg: urge pulp usage sister evidence arrest palm math please chief egg abuse
- * @property {integer} index.required - derivation index of private key - eg: 0
- */
-
-/**
- * @typedef EthTransfer
- * @property {string} chain.required - chain - 'mainnet' or 'ropsten' - eg: ropsten
- * @property {string} mnemonic.required - mnemonic to generate private key of sender - eg: urge pulp usage sister evidence arrest palm math please chief egg abuse
- * @property {integer} index.required - derivation index of sender address of sender - eg: 0
- * @property {string} senderAccountId.required - Sender account ID - eg: 7c21ed165e294db78b95f0f181086d6f
- * @property {string} targetAddress.required - Blockchain address to send assets - eg: 0x687422eEA2cB73B5d3e242bA5456b782919AFc85
- * @property {integer} amount.required - Amount to be sent in wei - eg: 100000
- * @property {string} senderNote - Note visible to owner of withdrawing account - eg: Sender note
- * @property {boolean} force - Force payment, even if it is non-compliant - eg: false
- */
-
-/**
- * @typedef Erc20Transfer
- ** @property {string} chain.required - chain - 'mainnet' or 'ropsten' - eg: ropsten
- * @property {string} mnemonic.required - mnemonic to generate private key of holder of ERC20 token - eg: urge pulp usage sister evidence arrest palm math please chief egg abuse
- * @property {integer} index.required - derivation index of sender address of holder of ERC20 token - eg: 0
- * @property {string} senderAccountId.required - Sender account ID - eg: 7c21ed165e294db78b95f0f181086d6f
- * @property {string} targetAddress.required - Blockchain address to send ERC20 token to - eg: 0x687422eEA2cB73B5d3e242bA5456b782919AFc85
- * @property {string} currency.required - ERC20 symbol - eg: MY_SYMBOL
- * @property {integer} amount.required - Amount to be sent in wei - eg: 100000
- * @property {string} senderNote - Note visible to owner of withdrawing account - eg: Sender note
- * @property {boolean} force - Force payment, even if it is non-compliant - eg: false
- * @property {string} tokenAddress.required - address of ERC20 token - eg: 0x687422eEA2cB73B5d3e242bA5456b782919AFc85
- */
-
-/**
- * @typedef Erc20Deploy
- * @property {string} chain.required - chain - 'mainnet' or 'ropsten' - eg: ropsten
- * @property {string} mnemonic.required - mnemonic to generate private key of deployer of ERC20 - eg: urge pulp usage sister evidence arrest palm math please chief egg abuse
- * @property {integer} index.required - derivation index of deployer address of ERC20 - eg: 0
- * @property {integer} payIndex.required - derivation index of address to pay for deployment of ERC20 - eg: 0
- * @property {integer} customerId.required - ID of customer to create ERC20 for - eg: 5
- * @property {string} name.required - name of the ERC20 token - eg: My ERC20 Token
- * @property {string} symbol.required - symbol of the ERC20 token - eg: MT
- * @property {integer} supply.required - max supply of ERC20 token - eg: 10000000
- * @property {enum} basePair.required - Base pair for ERC20 token. 1 token will be equal to 1 unit of base pair. Transaction value will be calculated according to this base pair. - eg: BTC,ETH,USD,CZK,EUR
- */
-
-/**
- * Generate wallet.
- * @route POST /eth/wallet
- * @group ETH - Operations with Ethereum blockchain
- * @param {WalletGenerateEth.model} chain.body.required - chain - 'mainnet' or 'ropsten'
- * @returns {Wallet.model} 200 - Object containing mnemonic, xpriv and xpub for generated wallet.
- */
 router.post('/wallet', (req, res) => {
   const {chain} = req.body
 
@@ -92,27 +21,12 @@ router.post('/wallet', (req, res) => {
   res.json({mnemonic, ...wallet})
 })
 
-/**
- * Calculate address from xpub on Ropsten / Mainnet for given derivation index
- * @route GET /eth/wallet/xpub/{pub}/{i}
- * @group ETH - Operations with Ethereum blockchain
- * @param {string} pub.path.required - xpub to generate address from
- * @param {integer} i.path.required - derivation index of address
- * @returns {Address.model} 200 - Generated address
- */
 router.get('/wallet/xpub/:pub/:i', ({params}, res) => {
   const {i, pub} = params
   const address = ethService.calculateAddress(pub, i)
   res.send({address})
 })
 
-/**
- * Calculate private key of address from mnemonic on Ropsten / Mainnet for given derivation index
- * @route POST /eth/wallet/xpriv
- * @group ETH - Operations with Ethereum blockchain
- * @param {XPrivEth.model} xpriv.body.required
- * @returns {PrivKey.model} 200 - Generated private key
- */
 router.post('/wallet/xpriv', ({body}, res) => {
   const {index, mnemonic, chain} = body
   const i = parseInt(index)
@@ -120,14 +34,6 @@ router.post('/wallet/xpriv', ({body}, res) => {
   res.json({privateKey})
 })
 
-/**
- * Send ETH / Ropsten ETH from account to account
- * @route POST /eth/transfer
- * @group ETH - Operations with Ethereum blockchain
- * @param {EthTransfer.model} transfer.body.required
- * @returns {TxHash.model} 200 - txHash of successful transaction
- * @security apiKey
- */
 router.post('/transfer', ({body, headers}, res) => {
   const {mnemonic, chain, index, ...withdrawal} = body
   const {amount, targetAddress} = withdrawal
@@ -215,14 +121,6 @@ router.post('/transfer', ({body, headers}, res) => {
     })
 })
 
-/**
- * Deploy ETH / Ropsten ETH ERC20 Smart Contract. Response could take quite a lot of time, average time of creation is 3-4 minutes.
- * @route POST /eth/erc20/deploy
- * @group ETH - Operations with Ethereum blockchain
- * @param {Erc20Deploy.model} erc20deploy.body.required
- * @returns {Erc20.model} 200 - information about ERC20 smart contract
- * @security apiKey
- */
 router.post('/erc20/deploy', async ({body, headers}, res) => {
   const {mnemonic, payIndex, chain, customerId, ...erc20} = body
   const {symbol} = erc20
@@ -299,14 +197,6 @@ router.post('/erc20/deploy', async ({body, headers}, res) => {
   }
 })
 
-/**
- * Transfer ETH / Ropsten ETH ERC20 Smart Contract Tokens from account to account
- * @route POST /eth/erc20/transfer
- * @group ETH - Operations with Ethereum blockchain
- * @param {Erc20Transfer.model} erc20.body.required
- * @returns {TxHash.model} 200 - txHash of successful transaction
- * @security apiKey
- */
 router.post('/erc20/transfer', async ({body, headers}, res) => {
   const {mnemonic, chain, index, tokenAddress, ...withdrawal} = body
   const {amount, targetAddress} = withdrawal
